Aded header and nav layout

--- a/src/index.html
+++ b/src/index.html
@@ -1,11 +1,58 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap" rel="stylesheet">
 </head>
+
 <body>
-    <h1>Hello Webpack!</h1>
+    <div class="wrapper">
+        <header class="header">
+            <img src="static/images/logo-main.svg" alt="wilkidzz orange logo" class="header__logo">
+            <nav class="main-nav">
+                <ul class="main-nav__list">
+                    <li class="main-nav__item">
+                        <a href="#" class="main-nav__link">Kinderkamers</a>
+                    </li>
+                    <li class="main-nav__item">
+                        <a href="#" class="main-nav__link">Kinderbedden</a>
+                    </li>
+                    <li class="main-nav__item">
+                        <a href="#" class="main-nav__link">Kinderkasten</a>
+                    </li>
+                    <li class="main-nav__item">
+                        <a href="#" class="main-nav__link">Kindermeubels</a>
+                    </li>
+                    <li class="main-nav__item">
+                        <a href="#" class="main-nav__link">Aanbiedingen</a>
+                    </li>
+                </ul>
+                <a href="tel:+31636063699" class="main-nav__phone">
+                    +31 63 606 3699
+                    <span class="main-nav__subtitle">Contact Us</span>
+                </a>
+                <button class="main-nav__button main-nav__button-lang">ND</button>
+                <button class="main-nav__button main-nav__button-cart">
+                    <span class="main-nav__goods-count">12</span>
+                    <span class="main-nav__goods-cost">€4,359</span>
+                </button>
+            </nav>
+            <button class="header__menu-btn">
+                <span class="menu-btn__line"></span>
+                <span class="menu-btn__line"></span>
+                <span class="menu-btn__line"></span>
+            </button>
+        </header>
+        <main class="main">
+
+        </main>
+        <footer class="footer">
+
+        </footer>
+    </div>
 </body>
+
 </html>
