--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
 <body>
     <div class="wrapper">
         <header class="header">
-            <img src="static/images/logo-main.svg" alt="wilkidzz orange logo" class="header__logo">
+            <img src="images/logo-main.svg" alt="wilkidzz orange logo" class="header__logo">
             <nav class="main-nav">
                 <ul class="main-nav__list">
                     <li class="main-nav__item">
