Aded mobile menu scripts

--- a/src/index.html
+++ b/src/index.html
@@ -11,40 +11,44 @@
 <body>
     <div class="wrapper">
         <header class="header">
-            <img src="images/logo-main.svg" alt="wilkidzz orange logo" class="header__logo">
-            <nav class="main-nav">
-                <ul class="main-nav__list">
-                    <li class="main-nav__item">
-                        <a href="#" class="main-nav__link">Kinderkamers</a>
-                    </li>
-                    <li class="main-nav__item">
-                        <a href="#" class="main-nav__link">Kinderbedden</a>
-                    </li>
-                    <li class="main-nav__item">
-                        <a href="#" class="main-nav__link">Kinderkasten</a>
-                    </li>
-                    <li class="main-nav__item">
-                        <a href="#" class="main-nav__link">Kindermeubels</a>
-                    </li>
-                    <li class="main-nav__item">
-                        <a href="#" class="main-nav__link">Aanbiedingen</a>
-                    </li>
-                </ul>
-                <a href="tel:+31636063699" class="main-nav__phone">
-                    +31 63 606 3699
-                    <span class="main-nav__subtitle">Contact Us</span>
-                </a>
-                <button class="main-nav__button main-nav__button-lang">ND</button>
-                <button class="main-nav__button main-nav__button-cart">
-                    <span class="main-nav__goods-count">12</span>
-                    <span class="main-nav__goods-cost">€4,359</span>
+            <img src="images/logo-main.svg" alt="wilkidzz orange logo" class="header__logo logo">   
+            <nav class="header__menu menu">
+                <button class="menu__btn btn">
+                    <span class="btn__line"></span>
+                    <span class="btn__line"></span>
+                    <span class="btn__line"></span>
                 </button>
+                <div class="menu__items">
+                    <ul class="menu__list">
+                        <li class="menu__item">
+                            <a href="#" class="menu__link">Kinderkamers</a>
+                        </li>
+                        <li class="menu__item">
+                            <a href="#" class="menu__link">Kinderbedden</a>
+                        </li>
+                        <li class="menu__item">
+                            <a href="#" class="menu__link">Kinderkasten</a>
+                        </li>
+                        <li class="menu__item">
+                            <a href="#" class="menu__link">Kindermeubels</a>
+                        </li>
+                        <li class="menu__item">
+                            <a href="#" class="menu__link">Aanbiedingen</a>
+                        </li>
+                    </ul>
+                    <div class="menu__buttons">
+                        <a href="tel:+31636063699" class="menu__phone">
+                            +31 63 606 3699
+                            <span class="menu__subtitle">Contact Us</span>
+                        </a>
+                        <button class="menu__button menu__lang">ND</button>
+                        <button class="menu__button menu__cart">
+                            <span class="menu__goods-count">12</span>
+                            <span class="menu__goods-cost">€4,359</span>
+                        </button>
+                    </div>
+                </div>
             </nav>
-            <button class="header__menu-btn">
-                <span class="menu-btn__line"></span>
-                <span class="menu-btn__line"></span>
-                <span class="menu-btn__line"></span>
-            </button>
         </header>
         <main class="main">
 
