Aded body scroll lock when menu is opened

--- a/src/index.html
+++ b/src/index.html
@@ -21,10 +21,10 @@
                 <div class="menu__items">
                     <ul class="menu__list">
                         <li class="menu__item">
-                            <a href="#" class="menu__link">Kinderkamers</a>
+                            <a href="#footer" class="menu__link">Kinderkamers</a>
                         </li>
                         <li class="menu__item">
-                            <a href="#" class="menu__link">Kinderbedden</a>
+                            <a href="#foo" class="menu__link">Kinderbedden</a>
                         </li>
                         <li class="menu__item">
                             <a href="#" class="menu__link">Kinderkasten</a>
@@ -51,9 +51,9 @@
             </nav>
         </header>
         <main class="main">
-
+            
         </main>
-        <footer class="footer">
+        <footer class="footer" id="footer">
 
         </footer>
     </div>
