Aded header menu desktop adaptation

--- a/src/index.html
+++ b/src/index.html
@@ -37,12 +37,12 @@
                         </li>
                     </ul>
                     <div class="menu__buttons">
-                        <a href="tel:+31636063699" class="menu__phone">
+                        <a href="tel:+31636063699" class="menu__control menu__phone">
                             +31 63 606 3699
                             <span class="menu__subtitle">Contact Us</span>
                         </a>
-                        <button class="menu__button menu__lang">ND</button>
-                        <button class="menu__button menu__cart">
+                        <button class="menu__control menu__lang">ND</button>
+                        <button class="menu__control menu__cart">
                             <span class="menu__goods-count">12</span>
                             <span class="menu__goods-cost">€4,359</span>
                         </button>
