Aded products block styles

--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
 <body>
     <div class="wrapper">
         <header class="header">
-            <img src="images/logo-main.svg" alt="wilkidzz orange logo" class="header__logo logo">   
+            <img src="images/logo-main.svg" alt="wilkidzz orange logo" class="header__logo logo">
             <nav class="header__menu menu">
                 <button class="menu__btn btn">
                     <span class="btn__line"></span>
@@ -51,29 +51,33 @@
             </nav>
         </header>
         <main class="main">
-           <article class="welcome">
+            <article class="welcome">
                 <h1 class="welcome__title">Welcome to wildkidzz</h1>
                 <p class="welcome__subtitle">Dutch children rooms since 1996</p>
-           </article>
-           <div class="content-wrapper">
+            </article>
+            <div class="content-wrapper">
                 <article class="products">
-                    <section class="products__producs product">
+                    <section class="products__product product">
                         <div class="product__text-wrapper">
                             <h2 class="product__title">Kinderbedden</h2>
-                            <p class="product__subtitle">We produce unique designs for kinder beds – princess beds, star beds, wave beds, castle
+                            <p class="product__subtitle">We produce unique designs for kinder beds – princess beds, star
+                                beds, wave beds, castle
                                 beds.</p>
                             <ul class="product__list">
                                 <li class="product__list-item">
-                                    We produce unique designs for kinder beds – princess beds, star beds, wave beds, castle beds, superhero beds.
+                                    We produce unique designs for kinder beds – princess beds, star beds, wave beds,
+                                    castle beds, superhero beds.
                                 </li>
                                 <li class="product__list-item">
-                                    Our kinderbedden designs are unique. We design and produce them, you won’t find anything similar anywhere else.
+                                    Our kinderbedden designs are unique. We design and produce them, you won’t find
+                                    anything similar anywhere else.
                                 </li>
                                 <li class="product__list-item">
                                     All our products are from MDF, very sturdy and saving the trees.
                                 </li>
                                 <li class="product__list-item">
-                                    We paint them in foodsafe paints in light or dark colors, and you can also paint and repair them yourself if you
+                                    We paint them in foodsafe paints in light or dark colors, and you can also paint and
+                                    repair them yourself if you
                                     want
                                     to.
                                 </li>
@@ -81,62 +85,62 @@
                                     All our beds come with lifetime guarantee to the first buyer.
                                 </li>
                             </ul>
-                            <button class="product__button">Shop kinderkamers</button>
+                            <a class="product__link">Shop kinderkamers</a>
                         </div>
                         <div class="product__img-wrapper">
                             <picture class="product__img">
                                 <!-- Images for desktop (min-width: ) -->
                                 <source srcset="static/images/products/kinderbedden.webp 1x,
                                                 static/images/products/kinderbedden@2x.webp 2x"
-                                        media="(min-width: 1100px)" 
-                                        type="image/webp">
+                                    media="(min-width: 1366px)" type="image/webp">
                                 <source srcset="static/images/products/kinderbedden.jpg 1x,
                                                 static/images/products/kinderbedden.jpg 2x"
-                                        media="(min-width: 1100px)">
+                                    media="(min-width: 1366px)">
                                 <!-- Images for mobile -->
                                 <source srcset="static/images/products/kinderbedden-mobile.webp 1x,
-                                                static/images/products/kinderbedden-mobile@2x.webp 2x" 
-                                        type="image/webp">
+                                                static/images/products/kinderbedden-mobile@2x.webp 2x"
+                                    type="image/webp">
                                 <img src="static/images/products/kinderbedden-mobile.jpg"
                                     srcset="static/images/products/kinderbedden-mobile@2x.jpg 2x"
                                     alt="Amazing Kinderbedden">
                             </picture>
                         </div>
                     </section>
-                    <section class="products__producs product">
+                    <section class="products__product product product--reversed">
                         <div class="product__text-wrapper">
                             <h2 class="product__title">Kinderclosetten</h2>
                             <p class="product__subtitle">Our closet and shelves are pretty unique.</p>
                             <ul class="product__list">
                                 <li class="product__list-item">Our closet and shelves are pretty unique.</li>
-                                <li class="product__list-item">They are designed in similar style to beds, and can be bought together as sets, or
+                                <li class="product__list-item">They are designed in similar style to beds, and can be
+                                    bought together as sets, or
                                     individually.</li>
                                 <li class="product__list-item">They are sturdy, will not fall, will not buldge.</li>
-                                <li class="product__list-item">We produce them since 1996, and they are very sturdy.</li>
+                                <li class="product__list-item">We produce them since 1996, and they are very sturdy.
+                                </li>
                             </ul>
-                            <button class="product__button">Shop kinderclosetten</button>
+                            <a class="product__link">Shop kinderclosetten</a>
                         </div>
                         <div class="product__img-wrapper">
                             <picture class="product__img">
                                 <!-- Images for desktop (min-width: ) -->
                                 <source srcset="static/images/products/kinderclosetten.webp 1x,
                                                 static/images/products/kinderclosetten@2x.webp 2x"
-                                        media="(min-width: 1100px)" 
-                                        type="image/webp">
+                                    media="(min-width: 1366px)" type="image/webp">
                                 <source srcset="static/images/products/kinderclosetten.jpg 1x,
                                                 static/images/products/kinderclosetten.jpg 2x"
-                                        media="(min-width: 1100px)">
+                                    media="(min-width: 1366px)">
                                 <!-- Images for mobile -->
                                 <source srcset="static/images/products/kinderclosetten-mobile.webp 1x,
-                                                static/images/products/kinderclosetten-mobile@2x.webp 2x" 
-                                        type="image/webp">
+                                                static/images/products/kinderclosetten-mobile@2x.webp 2x"
+                                    type="image/webp">
                                 <img src="static/images/products/kinderclosetten-mobile.jpg"
                                     srcset="static/images/products/kinderclosetten-mobile@2x.jpg 2x"
                                     alt="Amazing Kinderbedden">
                             </picture>
                         </div>
                     </section>
-                    <section class="products__producs--centered product">
+                    <section class="products__product product product--centered">
                         <div class="product__text-wrapper">
                             <h2 class="product__title">Tables & chairs</h2>
                             <p class="product__subtitle">Similar, but unique text to the above</p>
@@ -144,31 +148,27 @@
                                 <li class="product__list-item">Similar, but unique text to the above</li>
                                 <li class="product__list-item">Should read as continuation of the story.</li>
                             </ul>
-                            <button class="product__button">Shop tables & chairs</button>
+                            <a class="product__link">Shop tables & chairs</a>
                         </div>
                         <div class="product__img-wrapper">
                             <picture class="product__img">
                                 <!-- Images for desktop (min-width: ) -->
                                 <source srcset="static/images/products/tables.webp 1x,
-                                                static/images/products/tables@2x.webp 2x"
-                                        media="(min-width: 1100px)" 
-                                        type="image/webp">
+                                                static/images/products/tables@2x.webp 2x" media="(min-width: 1366px)"
+                                    type="image/webp">
                                 <source srcset="static/images/products/tables.jpg 1x,
-                                                static/images/products/tables.jpg 2x"
-                                        media="(min-width: 1100px)">
+                                                static/images/products/tables.jpg 2x" media="(min-width: 1366px)">
                                 <!-- Images for mobile -->
                                 <source srcset="static/images/products/tables-mobile.webp 1x,
-                                                static/images/products/tables-mobile@2x.webp 2x" 
-                                        type="image/webp">
+                                                static/images/products/tables-mobile@2x.webp 2x" type="image/webp">
                                 <img src="static/images/products/tables-mobile.jpg"
-                                    srcset="static/images/products/tables-mobile@2x.jpg 2x"
-                                    alt="Amazing Kinderbedden">
+                                    srcset="static/images/products/tables-mobile@2x.jpg 2x" alt="Amazing Kinderbedden">
                             </picture>
                         </div>
                     </section>
                 </article>
-           </div>
-           
+            </div>
+
         </main>
         <footer class="footer" id="footer">
 
