Aded how-we block layout and styles

--- a/src/index.html
+++ b/src/index.html
@@ -51,10 +51,10 @@
             </nav>
         </header>
         <main class="main">
-            <article class="welcome">
+            <section class="welcome">
                 <h1 class="welcome__title">Welcome to wildkidzz</h1>
                 <p class="welcome__subtitle">Dutch children rooms since 1996</p>
-            </article>
+            </section>
             <div class="content-wrapper">
                 <article class="products">
                     <section class="products__product product">
@@ -85,7 +85,7 @@
                                     All our beds come with lifetime guarantee to the first buyer.
                                 </li>
                             </ul>
-                            <a class="product__link">Shop kinderkamers</a>
+                            <a class="product__link content-link">Shop kinderkamers</a>
                         </div>
                         <div class="product__img-wrapper">
                             <picture class="product__img">
@@ -119,7 +119,7 @@
                                 <li class="product__list-item">We produce them since 1996, and they are very sturdy.
                                 </li>
                             </ul>
-                            <a class="product__link">Shop kinderclosetten</a>
+                            <a class="product__link content-link">Shop kinderclosetten</a>
                         </div>
                         <div class="product__img-wrapper">
                             <picture class="product__img">
@@ -148,7 +148,7 @@
                                 <li class="product__list-item">Similar, but unique text to the above</li>
                                 <li class="product__list-item">Should read as continuation of the story.</li>
                             </ul>
-                            <a class="product__link">Shop tables & chairs</a>
+                            <a class="product__link content-link">Shop tables & chairs</a>
                         </div>
                         <div class="product__img-wrapper">
                             <picture class="product__img">
@@ -167,6 +167,12 @@
                         </div>
                     </section>
                 </article>
+                <section class="how-we">
+                    <h2 class="how-we__title">How we make it?</h2>
+                    <p class="how-we__text">Leather goods WildKidzz can their national history. I want everything to be
+                        in order, our family grew in expectation of people for people.</p>
+                    <a href="" class="how-we__link content-link">Read More</a>
+                </section>
             </div>
 
         </main>
