Aded reviews and contacts block and styles

--- a/src/index.html
+++ b/src/index.html
@@ -4,8 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="Description" content="We are wilkidzz furniture store">
     <title>Document</title>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Barlow:ital,wght@1,400;1,700&family=Poppins:wght@500;600&display=swap"
+        rel="stylesheet">
 </head>
 
 <body>
@@ -13,7 +16,7 @@
         <header class="header">
             <img src="images/logo-main.svg" alt="wilkidzz orange logo" class="header__logo logo">
             <nav class="header__menu menu">
-                <button class="menu__btn btn">
+                <button class="menu__btn btn" aria-label="Open menu">
                     <span class="btn__line"></span>
                     <span class="btn__line"></span>
                     <span class="btn__line"></span>
@@ -172,6 +175,60 @@
                     <p class="how-we__text">Leather goods WildKidzz can their national history. I want everything to be
                         in order, our family grew in expectation of people for people.</p>
                     <a href="" class="how-we__link content-link">Read More</a>
+                </section>
+                <article class="reviews">
+                    <h2 class="reviews__title content-title">Reviews</h2>
+                    <div class="reviews__cards-wrapper">
+                        <section class="reviews__card card">
+                            <div class="card__text-wrapper">
+                                <h3 class="card__title">
+                                    Erg mooi hartjesbed voor ons
+                                    prinsesje
+                                </h3>
+                                <p class="card__text">
+                                    Erg mooi hartjesbed voor ons prinsesje! En wat een geluk dat het bed ook nog ter
+                                    plekke in elkaar!
+                                </p>
+                            </div>
+                            <p class="card__subtitle">Kris Wonderly</p>
+                        </section>
+                        <section class="reviews__card card">
+                            <div class="card__text-wrapper">
+                                <h3 class="card__title">
+                                    Erg mooi hartjesbed voor ons
+                                    prinsesje
+                                </h3>
+                                <p class="card__text">
+                                    Erg mooi hartjesbed voor ons prinsesje! En wat een geluk dat het bed ook nog ter
+                                    plekke in elkaar!
+                                </p>
+                            </div>
+                            <p class="card__subtitle">Miyah Miles</p>
+                        </section>
+                        <section class="reviews__card card">
+                            <div class="card__text-wrapper">
+                                <h3 class="card__title">
+                                    Erg mooi hartjesbed voor ons
+                                    prinsesje
+                                </h3>
+                                <p class="card__text">
+                                    Erg mooi hartjesbed voor ons prinsesje! En wat een geluk dat het bed ook nog ter
+                                    plekke in elkaar!
+                                </p>
+                            </div>
+                            <p class="card__subtitle">Andreas Brixen</p>
+                        </section>
+                    </div>
+                    <a href="#" class="reviews__link content-link">Toon Testimonials</a>
+                </article>
+                <section class="contacts">
+                    <h2 class="contacts__title secondary-title">Do you have any questions?</h2>
+                    <p class="contacts__text secondary-text">We will be happy to discuss and answer any of your
+                        questions.</p>
+                    <div class="contacts__bottom-part">
+                        <a href="tel:+31636063699" class="contacts__number">+31 636 0636 99</a>
+                        <p class="contacts__schedule">Mon - Fr 9:00-17:00</p>
+                    </div>
                 </section>
             </div>
 
