--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
     <meta name="Description" content="We are wilkidzz furniture store">
     <title>Document</title>
     <link
-        href="https://fonts.googleapis.com/css2?family=Barlow:ital,wght@1,400;1,700&family=Poppins:wght@500;600&display=swap"
+        href="https://fonts.googleapis.com/css2?family=Barlow:wght@400;500;700&family=Poppins:wght@500;600&display=swap"
         rel="stylesheet">
 </head>
 
@@ -55,8 +55,8 @@
         </header>
         <main class="main">
             <section class="welcome">
-                <h1 class="welcome__title">Welcome to wildkidzz</h1>
-                <p class="welcome__subtitle">Dutch children rooms since 1996</p>
+                <h1 class="welcome__title secondary-title">Welcome to wildkidzz</h1>
+                <p class="welcome__subtitle secondary-text">Dutch children rooms since 1996</p>
             </section>
             <div class="content-wrapper">
                 <article class="products">
@@ -234,7 +234,50 @@
 
         </main>
         <footer class="footer" id="footer">
+            <nav class="footer__menu footer-menu">
+                <h2 class="footer__nav-title visually-hidden">Navigation in footer</h2>
+                <div class="footer-menu__item">
+                    <h3 class="footer-menu__item-title">Contact</h3>
+                    <ul class="footer-menu__list">
+                        <li class="footer-menu__list-item"><a
+                                href="https://www.google.com/maps/place/Hooiland+4M,+6666+MJ+Heteren,+Netherlands/@51.9415362,5.7560074,17z/data=!3m1!4b1!4m5!3m4!1s0x47c7a9688c9c4ee1:0x1d319e6cab1c2d59!8m2!3d51.9415329!4d5.7581961"
+                                class="footer-menu__link" target="_blank">Hooiland 4M, 6666 CJ Heteren</a></li>
+                        <li class="footer-menu__list-item"><a href="tel:+31636063699" class="footer-menu__link">+31 636
+                                0636 99</a>
+                        </li>
+                        <li class="footer-menu__list-item"><a href="mailto:info@wildkidzz.com"
+                                class="footer-menu__link">info@wildkidzz.com</a></li>
+                    </ul>
+                </div>
+                <div class="footer-menu__item">
+                    <h3 class="footer-menu__item-title">Customer Info</h3>
+                    <ul class="footer-menu__list">
+                        <li class="footer-menu__list-item"><a href="#" class="footer-menu__link">About</a></li>
+                        <li class="footer-menu__list-item"><a href="#" class="footer-menu__link">Reviews</a></li>
+                        <li class="footer-menu__list-item"><a href="#" class="footer-menu__link">How it’s done</a></li>
+                        <li class="footer-menu__list-item"><a href="#" class="footer-menu__link">Terms of service</a>
+                        </li>
+                        <li class="footer-menu__list-item"><a href="#" class="footer-menu__link">Contact</a></li>
+                    </ul>
+                </div>
+                <div class="footer-menu__item">
+                    <h3 class="footer-menu__item-title">Follow Us</h3>
+                    <div class="footer-menu__social-wrapper">
+                        <a href="https://m.facebook.com/home.php" class="footer-menu__social-link facebook">
 
+                        </a>
+                        <a href="https://www.instagram.com/" class="footer-menu__social-link instagram">
+
+                        </a>
+                    </div>
+                </div>
+            </nav>
+            <div class="footer__copyright copyright">
+                <p class="copyright__company">© 2019 - Alle rechten voorbehouden - Wildkidzz</p>
+                <p class="copyright__developers">Site developed by <a href="http://redstone.media/"
+                        class="copyright__img"><img src="./static/images/icons/redstone-logo.svg"
+                            alt="Redstone - open Redstone official site"></a></p>
+            </div>
         </footer>
     </div>
 </body>
